<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txt_Detail_first"
        android:layout_width="370dp"
        android:layout_height="73dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:hint="@string/add_txtFirst"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_Detail_last"
        android:layout_width="370dp"
        android:layout_height="73dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:hint="@string/add_txtLast"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Detail_first" />

    <TextView
        android:id="@+id/txt_Detail_phone"
        android:layout_width="370dp"
        android:layout_height="73dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:hint="@string/add_txtPhone"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Detail_last" />

    <TextView
        android:id="@+id/txt_Detail_dob"
        android:layout_width="370dp"
        android:layout_height="73dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:hint="@string/add_txtDob"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Detail_phone" />

    <Button
        android:id="@+id/btn_Detail_back"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:text="@string/detail_btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Detail_dob" />
</androidx.constraintlayout.widget.ConstraintLayout>